<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_welcome">Welcome to Velox Control!\n\nTo get started, swipe out the drawer from the left!</string>

    <!-- General -->
    <string name="general_appearance">Appearance</string>
    <string name="general_configuration">Configuration</string>
    <string name="general_behavior">Behavior</string>
    <string name="general_extras">Extras</string>
    <string name="general_about">About</string>
    <string name="general_tools">Tools</string>
    <string name="general_settings">Settings</string>
    <string name="general_close">Close</string>

    <!-- Dialogs -->
    <string name="all">All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait">Please Wait...</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Actions -->
    <string name="action_toggle">Toggle</string>
    <string name="action_tabs">Tabs</string>
    <string name="action_press_again">Press once again to exit!</string>

    <!-- Tools -->
    <string name="tools_fonts_title">Font Tool</string>
    <string name="tools_fonts_summary">Change your System Fonts.\n\nChoose the font you want to change!\n(Upload the font before to your internal memory / your sdcard)</string>
    <string name="tools_backup_title">Backup Tool</string>
    <string name="tools_backup_summary">Backup ROM Settings, Apps and more!</string>
    <string name="tools_backup_extendedsummary">Welcome to the <b><i>Velox Control Backup Tool</i></b>!\n\nFunctionality comming soon!</string>

    <!-- Font Tools -->
    <string name="tools_fonts_robotoregular_summary">This is the default normal Systemfont.</string>
    <string name="tools_fonts_robotobold_summary">This is the default bold Systemfont.</string>
    <string name="flash_font_info">will be flashed as \n%s\n</string>
    <string name="flash_font_info_done">Font successfully flashed!\nA reboot is recommended!</string>

    <!-- Flasher Tools -->
    <string name="tools_flasher_title">Flasher</string>
    <string name="tools_flasher_summary">Flash your favourite recovery!</string>

    <!-- Backup Tools -->
    <string name="tools_backup_autobackup_title">Autobackup</string>
    <string name="tools_backup_autobackup_on">Automatically backup changes.</string>
    <string name="tools_backup_autobackup_off">Don\'t automatically backup changes.</string>
    <string name="tools_backup_autobackup_list_title">Autobackup List</string>
    <string name="tools_backup_autobackup_list_summary">List of settings to automatically backup.</string>
    <string name="tools_backup_restore_title">Restore</string>
    <string name="tools_backup_restore_summary">List of settings to restore.</string>

    <!-- Tasker Tools -->
    <string name="tools_tasker_title">Tasker</string>
    <!-- Screen Off -->
    <string name="tools_tasker_screenoff_title">Screen Off</string>
    <string name="tools_tasker_screenoff_summary">Actions when you turn the screen off / on.</string>
    <string name="tools_tasker_screenoff_internet_title">Turn Internet off</string>
    <string name="tools_tasker_screenoff_internet_summary_on">Internet will be turned off.</string>
    <string name="tools_tasker_screenoff_internet_summary_off">Internet will not be turned off.</string>
    <!-- Optimization -->
    <string name="tools_tasker_optimization_title">Optimization</string>
    <string name="tools_tasker_optimization_filesystem_title">Filesystem</string>
    <string name="tools_tasker_optimization_filesystem_fstrim_cat_title">FSTRIM</string>
    <string name="tools_tasker_optimization_filesystem_fstrim_title">FSTRIM Partitions</string>
    <string name="tools_tasker_optimization_filesystem_fstrim_summary_on">Partitions are getting fstrimmed</string>
    <string name="tools_tasker_optimization_filesystem_fstrim_summary_off">Partitions are not getting fstrimmed</string>
    <string name="tools_tasker_optimization_filesystem_fstrim_interval_title">FSTRIM Intervals</string>
    <string name="tools_tasker_optimization_filesystem_fstrim_interval_summary">The interval when FSTRIM should run</string>

    <!-- Velox Control Preferences -->
    <string name="vc_extensive_logging_title">Enable Logging</string>
    <string name="vc_extensive_logging_summary">Log debug messages into LogCat</string>
    <string name="vc_double_press_end_title">Safe Exit (Needs Restart)</string>
    <string name="vc_double_press_end_summary">If enabled, you need to double-tap back to exit</string>
    <string name="vc_disable_launcher_title">Show app launcher</string>
    <string name="vc_disable_launcher_summary_on">App Launcher is showing</string>
    <string name="vc_disable_launcher_summary_off">App Launcher is not showing</string>

    <!-- Velox OS -->
    <string name="vc_os_title">Velox OS</string>
    <string name="vc_os_summary">Tweaks for the Velox OS itself</string>
    <string name="vc_os_disable_selinux_title">Force disable SELinux</string>
    <string name="vc_os_disable_selinux_summary_on">SELinux is force disabled on reboot</string>
    <string name="vc_os_disable_selinux_summary_off">SELinux uses default mode</string>

</resources>
